something on the windows runner changed
Signed-off-by: Justin Florentine <justin+github@florentine.us>

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -76,6 +76,7 @@ jobs:
           pattern: besu-*.zip
       - name: test Besu
         run: |
+          mkdir besu-tmp
           unzip besu-*.zip -d besu-tmp
           cd besu-tmp
           mv besu-* ../besu
