--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -77,7 +77,7 @@ jobs:
       - name: test Besu
         run: |
           mkdir besu-tmp
-          ls -lR
+          dir
           unzip besu-*.zip -d besu-tmp
           cd besu-tmp
           mv besu-* ../besu
