--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -74,9 +74,9 @@ jobs:
         uses: actions/download-artifact@eaceaf801fd36c7dee90939fad912460b18a1ffe
         with:
           pattern: besu-*.zip
+          merge-multiple: true
       - name: test Besu
         run: |
-          mkdir besu-tmp
           dir
           unzip besu-*.zip -d besu-tmp
           cd besu-tmp
