--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -1,8 +1,7 @@
 
-name: artifacts
+name: release artifacts
 
 on:
-  workflow_dispatch: 
   release:
     types:
       - prereleased
@@ -23,13 +22,8 @@ jobs:
       - name: setup gradle
         uses: gradle/actions/setup-gradle@9e899d11ad247ec76be7a60bc1cf9d3abbb9e7f1
       - name: assemble release
-        if: ${{ github.event_name == 'release' }}
         run:
           ./gradlew -Prelease.releaseVersion=${{github.ref_name}} -Pversion=${{github.ref_name}} assemble -Dorg.gradle.parallel=true -Dorg.gradle.caching=true
-      - name: assemble snapshot
-        if: ${{ github.event_name != 'release' }}
-        run:
-          ./gradlew assemble -Dorg.gradle.parallel=true -Dorg.gradle.caching=true
       - name: hashes
         id: hashes
         run: |
@@ -48,17 +42,6 @@ jobs:
           path: 'build/distributions/besu*.zip'
           name: besu-${{ github.ref_name }}.zip
           compression-level: 0
-      - name: Upload Release assets
-        if: ${{ github.event_name == 'release' }}
-        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
-        with:
-          append_body: true
-          files: |
-            build/distributions/besu*.tar.gz
-            build/distributions/besu*.zip
-          body: |
-            ${{steps.hashes.outputs.tarSha}}
-            ${{steps.hashes.outputs.zipSha}}
   testWindows:
     runs-on: windows-2022
     needs: artifacts
@@ -84,4 +67,23 @@ jobs:
           cd ..
           besu\bin\besu.bat --help
           besu\bin\besu.bat --version
-
+  publish:
+    runs-on: ubuntu-22.04
+    needs: testWindows
+    steps:
+      - name: Download archives
+        uses: actions/download-artifact@eaceaf801fd36c7dee90939fad912460b18a1ffe
+        with:
+          pattern: besu-*
+          merge-multiple: true
+          path: 'build/distributions'
+      - name: Upload Release assets
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
+        with:
+          append_body: true
+          files: |
+            build/distributions/besu*.tar.gz
+            build/distributions/besu*.zip
+          body: |
+            ${{steps.hashes.outputs.tarSha}}
+            ${{steps.hashes.outputs.zipSha}}
