--- a/.github/workflows/pre-review.yml
+++ b/.github/workflows/pre-review.yml
@@ -102,6 +102,7 @@ jobs:
           report_paths: '**/test-results/**/TEST-*.xml'
           annotate_only: true
   unittests-passed:
+    name: "unittests-passed"
     runs-on: ubuntu-22.04
     needs: [unitTests]
     permissions:
