--- a/.github/workflows/reference-tests.yml
+++ b/.github/workflows/reference-tests.yml
@@ -109,6 +109,7 @@ jobs:
           report_paths: '**/build/test-results/referenceTests/TEST-*.xml'
           annotate_only: true
   reftests-passed:
+    name: "reftests-passed"
     runs-on: ubuntu-22.04
     needs: [ referenceTestEthereum ]
     permissions:
