--- a/.github/workflows/pre-review.yml
+++ b/.github/workflows/pre-review.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
       - release-*
+      -
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   repolint:
