--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,6 +5,8 @@ on:
   push:
     -branches:
       - main
+env:
+  GRADLE_OPTS: "-Dorg.gradle.parallel=true -Dorg.gradle.caching=true"
 
 jobs:
   artifacts:
@@ -23,7 +25,7 @@ jobs:
         uses: gradle/actions/setup-gradle@9e899d11ad247ec76be7a60bc1cf9d3abbb9e7f1
       - name: assemble release
         run:
-          ./gradlew assemble -Dorg.gradle.parallel=true -Dorg.gradle.caching=true
+          ./gradlew assemble
       - name: upload tarball
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
