--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,15 +13,11 @@ name: "CodeQL"
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
-    pull_request:
-      branches: [ main ]
-      paths-ignore:
-        - '**/*.json'
-        - '**/*.md'
-        - '**/*.properties'
-        - '**/*.txt'
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    # expression evaluates to midnight every night
+    - cron: '0 0 * * *'
+
 jobs:
   analyze:
     name: Analyze
@@ -50,6 +46,8 @@ jobs:
 
     - name: setup gradle
       uses: gradle/actions/setup-gradle@9e899d11ad247ec76be7a60bc1cf9d3abbb9e7f1
+      with:
+        cache-disabled: true
     - name: compileJava noscan
       run: |
         JAVA_OPTS="-Xmx2048M" ./gradlew --no-scan compileJava
