--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -1,7 +1,7 @@
 name: acceptance-tests
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     branches:
       - main
       - release-*
@@ -70,12 +70,6 @@ jobs:
         with:
           name: acceptance-node-${{matrix.runner_index}}-test-results
           path: 'acceptance-tests/tests/build/test-results/**/TEST-*.xml'
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@5f47764eec0e1c1f19f40c8e60a5ba47e47015c5
-        if: (success() || failure()) # always run even if the build step fails
-        with:
-          report_paths: 'acceptance-tests/tests/build/test-results/**/TEST-*.xml'
-          annotate_only: true
   accepttests-passed:
     name: "accepttests-passed"
     runs-on: ubuntu-22.04
