--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,7 +1,7 @@
 name: integration-tests
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     branches:
       - main
       - release-*
@@ -36,11 +36,5 @@ jobs:
           cache-disabled: true
       - name: run integration tests
         run: ./gradlew integrationTest compileJmh
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@5f47764eec0e1c1f19f40c8e60a5ba47e47015c5
-        if: (success() || failure())
-        with:
-          report_paths: '**/build/test-results/integrationTest/TEST-*.xml'
-          annotate_only: true
 
 
