--- a/.github/workflows/pre-review.yml
+++ b/.github/workflows/pre-review.yml
@@ -1,7 +1,7 @@
 name: pre-review
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - main
       - release-*
@@ -91,6 +91,14 @@ jobs:
           - "ethereum:api:testRemainder"
           - "ethereum:eth:test"
           - "ethereum:core:test"
+        archive_name:
+          - "everythingElse"
+          - "consensusCrypto"
+          - "apiBonsai"
+          - "apiForest"
+          - "apiRemainder"
+          - "eth"
+          - "core"
     steps:
       - name: Checkout Repo
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
@@ -108,12 +116,11 @@ jobs:
       - name: run unit tests
         id: unitTest
         run: ./gradlew $GRADLEW_UNIT_TEST_ARGS
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@5f47764eec0e1c1f19f40c8e60a5ba47e47015c5
-        if: success() || failure() # always run even if the build step fails
+      - name: Upload Acceptance Test Results
+        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
-          report_paths: '**/test-results/**/TEST-*.xml'
-          annotate_only: true
+          name: unit-${{matrix.archive_name}}-test-results
+          path: '**/test-results/**/TEST-*.xml'
   unittests-passed:
     name: "unittests-passed"
     runs-on: ubuntu-22.04
