--- a/.github/workflows/reference-tests.yml
+++ b/.github/workflows/reference-tests.yml
@@ -1,7 +1,7 @@
 name: reference-tests
 on:
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     branches:
       - main
       - release-*
@@ -62,12 +62,6 @@ jobs:
         with:
           name: reference-test-node-${{matrix.runner_index}}-results
           path: '**/build/test-results/referenceTests/TEST-*.xml'
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@5f47764eec0e1c1f19f40c8e60a5ba47e47015c5
-        if: success() || failure() # always run even if the build step fails
-        with:
-          report_paths: '**/build/test-results/referenceTests/TEST-*.xml'
-          annotate_only: true
   reftests-passed:
     name: "reftests-passed"
     runs-on: ubuntu-22.04
