--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -28,24 +28,17 @@ jobs:
       - name: assemble release
         run:
           ./gradlew assemble
-      - name: upload tarball
-        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
-        with:
-          path: 'build/distributions/besu*.tar.gz'
-          name: besu-develop.tar.gz
-          compression-level: 0
       - name: hashes
         id: hashes
         run: |
           cd build/distributions
           echo "zipSha=$(shasum -a 256 besu*.zip)" >> $GITHUB_OUTPUT
           echo "tarSha=$(shasum -a 256 besu*.tar.gz)" >> $GITHUB_OUTPUT
-      - name: upload zipfile
-        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
-        with:
-          path: 'build/distributions/besu*.zip'
-          name: besu-develop.zip
-          compression-level: 0
+      - name: rename files
+        run: |
+          cd 'build/distributions'
+          mv besu*.zip besu-develop.zip
+          mv besu*.tar.gz besu-develop.zip
       - name: Upload Release assets
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
         with:
@@ -55,8 +48,8 @@ jobs:
           fail_on_unmatched_files: true
           append_body: false
           files: |
-            build/distributions/besu*.tar.gz
-            build/distributions/besu*.zip
+            build/distributions/besu-develop.tar.gz
+            build/distributions/besu-develop.zip
           body: |
             This is an automated, bleeding edge build from the tip of ${{ github.ref_name }}. No promises. YOLO.
             
