checkMavenCoordinateCollisions needs a publication with an explicitly set version, does not inherit project.version
Signed-off-by: Justin Florentine <justin+github@florentine.us>

--- a/build.gradle
+++ b/build.gradle
@@ -682,7 +682,9 @@ distZip {
 publishing {
   publications {
     distArtifactory(MavenPublication) {
+      groupId = '.'
       version = project.version
+      artifactId = 'besu'
     }
   }
 }
