--- a/ethereum/core/build.gradle
+++ b/ethereum/core/build.gradle
@@ -32,7 +32,7 @@ dependencies {
   api 'org.web3j:core'
 
   annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess'
-  annotationProcessor 'org.hyperledger.errorpronechecks:besu-errorprone-checks'
+  annotationProcessor 'org.hyperledger.besu:besu-errorprone-checks'
 
   implementation project(':config')
   implementation project(':crypto:algorithms')
