undocumented default of true for draft
Signed-off-by: Justin Florentine <justin+github@florentine.us>

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -44,6 +44,7 @@ jobs:
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
         with:
           prerelease: true
+          draft: false
           name: develop
           tag_name: develop
           fail_on_unmatched_files: true
