--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -48,13 +48,13 @@ jobs:
           compression-level: 0
       - name: Artifactory Publish
         env:
-          ARTIFACTORY_USER: ${{ secrets.BESU_ARTIFACTORY }}
+          ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER }}
+          ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY }}
         run: ./gradlew -Prelease.releaseVersion=${{ github.ref_name }} -Pversion=${{github.ref_name}} artifactoryPublish
   testWindows:
     runs-on: windows-2022
     needs: artifacts
     timeout-minutes: 10
-    if: ${{ github.actor != 'dependabot[bot]' }}
     steps:
       - name: Set up Java
         uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93
