--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -36,10 +36,15 @@ jobs:
           echo "zipSha=$(shasum -a 256 besu*.zip)" >> $GITHUB_OUTPUT
           echo "tarSha=$(shasum -a 256 besu*.tar.gz)" >> $GITHUB_OUTPUT
           cd ../..
+      - name: delete current develop release
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: gh release delete develop -y --cleanup-tag
       - name: Upload Release assets
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
         with:
           prerelease: true
+          draft: false
           name: develop
           tag_name: develop
           fail_on_unmatched_files: true
