fix:Issue #2639 -> Improve warning on invalid JDK version
Use gradle enforcer plugin to display a message on this model when using invalid JDK version:
Detected JDK Version: 11.0.15 is not in the allowed range [17,18).

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,20 @@
 pluginManagement {
   repositories {
     gradlePluginPortal()
+    mavenCentral()
+  }
+
+}
+
+plugins {
+  id("org.kordamp.gradle.enforcer") version "0.13.0"
+}
+
+enforce {
+  rule(enforcer.rules.RequireJavaVersion) { r ->
+    r.enabled = true
+    r.phases = ['BEFORE_BUILD']
+    r.version = '[17,18)'
   }
 }
 
