build: Adding back top level publishing task
Signed-off-by: Usman Saleem <usman@usmans.info>

--- a/build.gradle
+++ b/build.gradle
@@ -685,6 +685,16 @@ distZip {
   setVersion(archiveBuildVersion)
 }
 
+publishing {
+  publications {
+    distArtifactory(MavenPublication) {
+      groupId = '.'
+      version = project.version
+      artifactId = 'besu'
+    }
+  }
+}
+
 artifactoryPublish {
   dependsOn distTar
   dependsOn distZip
