--- a/build.gradle
+++ b/build.gradle
@@ -663,6 +663,15 @@ distZip {
   setVersion(archiveBuildVersion)
 }
 
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      groupId = '.'
+      version = project.version
+      artifactId = 'linea-besu'
+    }
+  }
+}
 def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
 def dockerOrgName = project.hasProperty('dockerOrgName') ? project.getProperty("dockerOrgName") : "hyperledger"
 def dockerArtifactName = project.hasProperty("dockerArtifactName") ? project.getProperty("dockerArtifactName") : "besu"
