fix:Issue #2639 -> Improve warning on invalid JDK version
Use org.kordamp.gradle.enforcer plugin to check JDK version

Signed-off-by: Sébastien Perpignane <sebastien.perpignane@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,18 @@ pluginManagement {
   }
 }
 
+plugins {
+  id("org.kordamp.gradle.enforcer") version "0.13.0"
+}
+
+enforce {
+  rule(enforcer.rules.RequireJavaVersion) { r ->
+    r.enabled = true
+    r.phases = ['BEFORE_BUILD']
+    r.version = '[17,18)'
+  }
+}
+
 rootProject.name='besu'
 include 'acceptance-tests:test-plugins'
 include 'acceptance-tests:dsl'
